# pymodaq_plugins_pulsedmeasurement

./: README.rst  pyproject.toml
src/pymodaq_plugins_PulseSequences/app/: custom_app_template.py
src/pymodaq_plugins_PulseSequences/daq_viewer_plugins/plugins_1D/: daq_1Dviewer_PulsedCounter.py  daq_1Dviewer_Rabi.py  daq_1Dviewer_T1exp.py
src/pymodaq_plugins_PulseSequences/extensions/: custom_extension_template.py  main_gui.py  pulsed_measurement_extension.py
src/pymodaq_plugins_PulseSequences/hardware/: _instruction.py  _spinapi.py  exceptions.py  mcs8_wrapper.py  pulsed_controller.py
src/pymodaq_plugins_fastcomtec/daq_viewer_plugins/plugins_1D/: daq_1Dviewer_MSC8A.py
src/pymodaq_plugins_fastcomtec/hardware/: msc8_wrapper.py
src/pymodaq_plugins_pulsedmeasurement/: __init__.py
src/pymodaq_plugins_pulsedmeasurement/daq_viewer_plugins/plugins_1D/: daq_1Dviewer_PulsedCounter.py  daq_1Dviewer_Rabi.py  daq_1Dviewer_T1exp.py
src/pymodaq_plugins_pulsedmeasurement/extensions/: fit_widget.py  main_gui.py  pulsed_measurement_extension.py
src/pymodaq_plugins_pulsedmeasurement/hardware/: log.txt  pulseblaster.py  structures.py
src/pymodaq_plugins_pulsedmeasurement/models/: extraction_stack_model.py
src/pymodaq_plugins_pulsedmeasurement/resources/: config_template.toml  default_pulse_sequences.py  fit_methods.py  fit_methods_template.py  pulse_sequence_template.py
