[features]  # defines the plugin features contained into this plugin
instruments = true  # true if plugin contains instrument classes (else false, notice the lowercase for toml files)
extensions = true  # true if plugins contains dashboard extensions
models = false  # true if plugins contains pid models
h5exporters = false  # true if plugin contains custom h5 file exporters
scanners = false  # true if plugin contains custom scan layout (daq_scan extensions)

[urls]
package-url = 'https://github.com/Montpellier-S2QT/pymodaq_plugins_pulsesequences' #todo modify url by your plugin url

[project]
name = "pymodaq_plugins_pulsedmeasurement"
description = 'Plugin with custom 1D viewer for performing pulse measurements'
dependencies = [
    "pymodaq>=5.0.0",
    "scientific_spinbox",
]

authors = [
    {name = "Lucas Moreau--Lalaux", email = "lucas.moreau-lalaux@ens-lyon.fr"},
    {name = "Jessica Tournaud", email = "jessica.tournaud@umontpellier.fr"},
]
maintainers = [
    {name = "Lucas Moreau--Lalaux", email = "lucas.moreau-lalaux@ens-lyon.fr"},
    {name = "Jessica Tournaud", email = "jessica.tournaud@umontpellier.fr"},
]

# nottodo: leave everything below as is!

dynamic = ["version", "urls", "entry-points"]
readme = "README.rst"
license = { file="LICENSE" }
requires-python = ">=3.8"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]

[build-system]
requires = [
    "hatchling>=1.9.0",
    "hatch-vcs", "toml",
    "pymodaq_utils>=0.0.6",
]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.custom]

[tool.hatch.version]
source = "vcs"

# probably not the right place to put it
[tool.hatch.build.targets.wheel]
packages = ["src/pymodaq_plugins_pulsedmeasurement"]

